trying to fix high contrast mode

--- a/lab3.css
+++ b/lab3.css
@@ -85,6 +85,6 @@ a:hover {
 }
 .high-contrast {
 
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 }
